--- a/public/stats.html
+++ b/public/stats.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header class="bg-blue text-center">
+    <header class="bg-cyan text-center">
       <div class="container container--narrow">
         <p>UEFA Champions League</p>
         <h1>Stats</h1>
@@ -45,8 +45,26 @@
         </li>
       </ul>
     </nav>
-    <hr class="nav-underline">
 
     <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
+
+    <footer class="bg-footer"> <!--TODO: Footer social-media-->
+      <div class="footer-content">
+        <h3>Portfolio - Loris Schell</h3>
+        <p>
+          Course: WI20C | Student-ID: 3779830
+        </p>
+        <ul class="socials">
+          <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+          <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li> -->
+        </ul>
+      </div>
+      <div class="footer-bottom">
+        <p>Copyright &copy;2021 Loris Schell. Designed by <span>Loris Schell</span></p>
+      </div>
+    </footer>
+
   </body>
 </html>
