--- a/public/table.html
+++ b/public/table.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <header class="bg-blue text-center">
+    <header class="bg-cyan text-center">
       <div class="container container--narrow">
         <p>UEFA Champions League</p>
         <h1>Standings Season 2021/22 Group Stage</h1>
@@ -66,7 +66,6 @@
         </li>
       </ul>
     </nav>
-    <hr class="nav-underline">
 
     <div class="grid-box">
       <section class="group-standings">
@@ -943,5 +942,24 @@
     </div>
 
     <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
+
+    <footer class="bg-footer"> <!--TODO: Footer social-media-->
+      <div class="footer-content">
+        <h3>Portfolio - Loris Schell</h3>
+        <p>
+          Course: WI20C | Student-ID: 3779830
+        </p>
+        <ul class="socials">
+          <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+          <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li> -->
+        </ul>
+      </div>
+      <div class="footer-bottom">
+        <p>Copyright &copy;2021 Loris Schell. Designed by <span>Loris Schell</span></p>
+      </div>
+    </footer>
+
   </body>
 </html>
