basis for timeline

--- a/public/history.html
+++ b/public/history.html
@@ -6,6 +6,7 @@
     <title>Portfolio | UEFA Champions League</title>
 
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/history.css" />
     <script src="js/main.js" defer></script>
   </head>
 
@@ -17,46 +18,136 @@
       </div>
     </header>
 
-    <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
+    <button
+      class="mobile-nav-toggle"
+      aria-controls="primary-navigation"
+      aria-expanded="false"
+    >
       <span class="sr-only">Menu</span>
     </button>
 
     <nav>
-      <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
+      <ul
+        id="primary-navigation"
+        data-visible="false"
+        class="primary-navigation flex"
+      >
         <li>
-          <a class="uppercase text-dark letter-spacing-2 nav-link" href="index.html">
+          <a
+            class="uppercase text-dark letter-spacing-2 nav-link"
+            href="index.html"
+          >
             <span aria-hidden="true">00</span>Home
           </a>
         </li>
         <li>
-          <a class="uppercase text-dark letter-spacing-2 nav-link" href="table.html">
+          <a
+            class="uppercase text-dark letter-spacing-2 nav-link"
+            href="table.html"
+          >
             <span aria-hidden="true">01</span>Tables
           </a>
         </li>
         <li>
-          <a class="uppercase text-dark letter-spacing-2 nav-link" href="stats.html">
+          <a
+            class="uppercase text-dark letter-spacing-2 nav-link"
+            href="stats.html"
+          >
             <span aria-hidden="true">02</span>Stats
           </a>
         </li>
         <li>
-          <a class="uppercase text-dark letter-spacing-2 active nav-link" href="history.html">
+          <a
+            class="uppercase text-dark letter-spacing-2 active nav-link"
+            href="history.html"
+          >
             <span aria-hidden="true">03</span>History
           </a>
         </li>
       </ul>
     </nav>
 
-    <section></section>
-    <section></section>
-    
-    <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
+    <div class="content-wrapper">
+      <div class="timeline">
+        <div class="time-container left">
+          <div class="content">
+            <h2>2017</h2>
+            <p>
+              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
+              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+              primis ea eam.
+            </p>
+          </div>
+        </div>
+        <div class="time-container right">
+          <div class="content">
+            <h2>2016</h2>
+            <p>
+              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
+              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+              primis ea eam.
+            </p>
+          </div>
+        </div>
+        <div class="time-container left">
+          <div class="content">
+            <h2>2015</h2>
+            <p>
+              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
+              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+              primis ea eam.
+            </p>
+          </div>
+        </div>
+        <div class="time-container right">
+          <div class="content">
+            <h2>2012</h2>
+            <p>
+              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
+              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+              primis ea eam.
+            </p>
+          </div>
+        </div>
+        <div class="time-container left">
+          <div class="content">
+            <h2>2011</h2>
+            <p>
+              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
+              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+              primis ea eam.
+            </p>
+          </div>
+        </div>
+        <div class="time-container right">
+          <div class="content">
+            <h2>2007</h2>
+            <p>
+              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
+              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
+              primis ea eam.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <footer class="bg-footer"> <!--TODO: Footer social-media-->
+    <button
+      class="scrollTopBtn transparent-look"
+      aria-label="ScrollUp"
+    ></button>
+
+    <footer class="bg-footer">
+      <!--TODO: Footer social-media-->
       <div class="footer-content">
         <h3>Portfolio - Loris Schell</h3>
-        <p>
-          Course: WI20C | Student-ID: 3779830
-        </p>
+        <p>Course: WI20C | Student-ID: 3779830</p>
         <ul class="socials">
           <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -65,9 +156,11 @@
         </ul>
       </div>
       <div class="footer-bottom">
-        <p>Copyright &copy;2021 Loris Schell. Designed by <span>Loris Schell</span></p>
+        <p>
+          Copyright &copy;2021 Loris Schell. Designed by
+          <span>Loris Schell</span>
+        </p>
       </div>
     </footer>
-
   </body>
 </html>
