--- a/public/history.html
+++ b/public/history.html
@@ -13,8 +13,8 @@
   <body>
     <header class="bg-cyan text-center">
       <div class="container container--narrow">
-        <p>UEFA Champions League</p>
-        <h1>A Brief History of the Champions League</h1>
+        <p>UEFA Champions League | History</p>
+        <h1>A brief overview of the milestones of the Champions League</h1>
       </div>
     </header>
 
@@ -71,67 +71,65 @@
       <div class="timeline">
         <div class="time-container left">
           <div class="content">
-            <h2>2017</h2>
+            <h2>1950</h2>
             <p>
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-              primis ea eam.
+              Emergence of the idea for a European Cup of national champions.
             </p>
           </div>
         </div>
         <div class="time-container right">
           <div class="content">
-            <h2>2016</h2>
+            <h2>1954</h2>
             <p>
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-              primis ea eam.
+              Development of a first draft by Gabriel Hanot.
             </p>
           </div>
         </div>
         <div class="time-container left">
           <div class="content">
-            <h2>2015</h2>
+            <h2>1955</h2>
             <p>
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-              primis ea eam.
+              Proposal for a set of rules by Gabriel Hanot.
             </p>
           </div>
         </div>
         <div class="time-container right">
           <div class="content">
-            <h2>2012</h2>
+            <h2>1955</h2>
             <p>
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-              primis ea eam.
+              Start of the first tournament.
             </p>
           </div>
         </div>
         <div class="time-container left">
           <div class="content">
-            <h2>2011</h2>
+            <h2>1956</h2>
             <p>
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-              primis ea eam.
+              1st winner: Real Madrid.
             </p>
           </div>
         </div>
         <div class="time-container right">
           <div class="content">
-            <h2>2007</h2>
+            <h2>1992</h2>
             <p>
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-              iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-              primis ea eam.
+              Renaming to UEFA Champions League.
+            </p>
+          </div>
+        </div>
+        <div class="time-container left">
+          <div class="content">
+            <h2>1997</h2>
+            <p>
+              Now not only the champions of the leagues should play against each other but also the vice-champions may participate now.
+            </p>
+          </div>
+        </div>
+        <div class="time-container right">
+          <div class="content">
+            <h2>1999</h2>
+            <p>
+              The participants of a national league is now a maximum of 4 clubs. How many of a league may finally participate depends on the performance of the soccer federation of that country in the past years.
             </p>
           </div>
         </div>
@@ -144,23 +142,16 @@
     ></button>
 
     <footer class="bg-footer">
-      <!--TODO: Footer social-media-->
       <div class="footer-content">
         <h3>Portfolio - Loris Schell</h3>
-        <p>Course: WI20C | Student-ID: 3779830</p>
-        <ul class="socials">
-          <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li> -->
-        </ul>
-      </div>
-      <div class="footer-bottom">
         <p>
-          Copyright &copy;2021 Loris Schell. Designed by
-          <span>Loris Schell</span>
+          Course: WI20C | Student-ID: 3779830
         </p>
       </div>
+      <div class="footer-bottom">
+        <p>Copyright &copy;2021 Loris Schell. Designed by <span>Loris Schell</span></p>
+      </div>
     </footer>
+    
   </body>
 </html>
