--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
 
     <section class="bg-dark">
       <div class="container">
-        <h2 class="text-center">UCL Anthem</h2>
+        <h2 class="text-center">UCL Anthem</h2> <!--TODO:markup of text with quote etc.-->
         <hr class="underline" />
         <div class="split">
           <div>
@@ -194,7 +194,7 @@
       </div>
     </section>
 
-    <section style="background-image: transparent">
+    <section>
       <div class="container">
         <div class="split">
           <div>
@@ -204,7 +204,7 @@
             <h2>Trophy</h2>
             <hr />
             <p class="text-justify">
-              The European Champion Clubs' Cup, also known as the Coupe des Clubs Champions Européens or simply the European Cup, is a trophy awarded annually by UEFA to the football club that wins the UEFA Champions League. In its former form, the competition bore the same name as the Cup and was also known as the European Cup before being renamed from the 1992/93 season. Several physical trophies bore this name, as a club was allowed to keep the trophy after five wins or three consecutive victories and a new trophy had to be forged for the following season. The original European Cup trophy was donated by the French sports newspaper L'Équipe. In March 1967, this trophy was permanently awarded to Real Madrid. At that time, Real Madrid was the reigning champion and had won a total of six titles, including the first five competitions from 1956 to 1960, making Celtic the first club to win the trophy in its current form in 1967.
+              The European Champion Clubs' Cup, also known as the European Cup, is a trophy awarded annually by UEFA to the football club that wins the UEFA Champions League. In its former form, the competition bore the same name as the Cup and was also known as the European Cup before being renamed from the 1992/93 season. Several physical trophies bore this name, as a club was allowed to keep the trophy after five wins or three consecutive victories and a new trophy had to be forged for the following season. The original European Cup trophy was donated by the French sports newspaper L'Équipe. In March 1967, this trophy was permanently awarded to Real Madrid. At that time, Real Madrid was the reigning champion and had won a total of six titles, including the first five competitions from 1956 to 1960, making Celtic the first club to win the trophy in its current form in 1967.
             </p>
           </div>
         </div>
@@ -216,22 +216,17 @@
       aria-label="ScrollUp"
     ></button>
 
-    <footer class="bg-footer"> <!--TODO: Footer social-media-->
+    <footer class="bg-footer">
       <div class="footer-content">
         <h3>Portfolio - Loris Schell</h3>
         <p>
           Course: WI20C | Student-ID: 3779830
         </p>
-        <ul class="socials">
-          <!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li> -->
-        </ul>
       </div>
       <div class="footer-bottom">
         <p>Copyright &copy;2021 Loris Schell. Designed by <span>Loris Schell</span></p>
       </div>
     </footer>
+    
   </body>
 </html>
